[package]
name = "wvwasi"
license = "MIT"
version = "0.1.2"
description = "A WebView with WASI may be the best JS/WASM runtime, and wvwasi is it."
repository = "https://github.com/defims/wvwasi"
homepage = "https://wvwasi.com"
keywords = ["webview", "wasi", "webassembly", "wasm", "rust"]
edition = "2021"
exclude = [ ".cargo" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
regex = "1.9.1"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
wasi-cap-std-sync = "10.0.1"
wasi-common = "10.0.1"
webview2-com = "0.25.0"
wiggle = "10.0.1"
wvwasi-wry = "0.29.0-wvwasi-0.1.2"

[dependencies.windows]
version = "0.48.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]

[dev-dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]

